# sk-cw-parser

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
actions/: Presentation.md  __init__.py
webui/: package-lock.json  package.json
webui/src/: App.css  App.js
